# Plutus-Contracts

./: .gitignore  README.md  cabal.project  hie.yaml  plutus-starter.cabal  shell.nix  tokenMint2.policy
.devcontainer/: devcontainer.json
app/: Main.hs
nix/: sources.json
nix/pkgs/haskell/: sha256map.nix
src/: ContractErrors.hs  FortyTwo.hs  PlutusOptions.hs  Tokens.hs  Utils.hs
src/StateMachines/: LightSwitch.hs  LightSwitch2.hs  Trafficlight.hs
src/TokenMint1/: SendToScriptMint.hs  Trace.hs
src/TokenMint2/: Mint.hs  Trace.hs
