cabal-version:      3.0
name:               contract-sandbox
version:            0.1.0.0
license: Apache-2.0
license-files: LICENSE
author:             Jack O'Brien
maintainer:         jack@yumi.ai

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: False
    manual: True

common lang
    default-language:   Haskell2010
    ghc-options:
      -Wall -Wnoncanonical-monad-instances
      -Wincomplete-uni-patterns -Wincomplete-record-updates
      -Wredundant-constraints -Widentities -rtsopts
      -- See Plutus Tx readme
      -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    if flag(defer-plugin-errors)
        ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

library
    import: lang
    exposed-modules:
      FortyTwo,
      Tokens,
      StateMachines.LightSwitch,
      StateMachines.LightSwitch2
    build-depends:
      , aeson
      , base >=4.9 && <5
      , bytestring
      , cardano-api
      , containers
      , data-default
      , freer-extras
      , freer-simple
      , lens
      , optparse-applicative
      , playground-common
      , plutus-contract
      , plutus-ledger
      , plutus-ledger-api
      , plutus-ledger-constraints
      , plutus-script-utils
      , plutus-tx
      , plutus-tx-plugin
      , plutus-use-cases
      , serialise
      , text
    hs-source-dirs: src